# HildasFavour0

./: config.json  ips.json  main.py  pyproject.toml
templates/: admindash.html  adminlogin.html  adminsettings.html  base.html  form.html  index.html  welcome.html  x.js
templates/scss/: style.scss
