[tool.poetry]
name = "repl_python3_HildasFavour0"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
flask = "^2.0.0"
pickledb = "^0.9.2"
captcha = "^0.3"
werkzeug = "^2.0.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
